[package]
name = "mefrpd"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
async-tungstenite = { version = "0.29.1", features = ["tokio-runtime"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
nanoid = "0.4.0"
once_cell = "1.21.3"
pretty_env_logger = "0.5.0"
reqwest = "0.12.15"
reserve-port = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "chrono"] }
tempfile = "3.19.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.26.2"
rustyline = "14.0"

[build-dependencies]
thunk-rs = { version = "0.3", features = ["win8"] }
vc-ltl = "5.2"
anyhow = "1"

[profile.release]
lto = true
strip = true

[[bin]]
name = "mefrpd"
path = "src/main.rs"

[[bin]]
name = "mefrpsh"
path = "src/terminal.rs"
